# GUser-SIRIUS

./: README.md
GUser-build/: GruScript.C  GruScript_offline.C  GruScript_online.C  ListRun.txt  doCleanMake.csh  doCmake.csh  doMake.csh  kill_gruScript.sh  kill_gruScript_offline.sh  launch_gruConfig.csh  launch_gruScript.csh  launch_gruScript_offline.csh  launch_guiApp.csh  launch_guiApp.sh  launch_vigru.csh  openGuserWorkspace.csh
GUser-build/ConfigFiles/: Run.config  Run_offline.config  numexo2Boards.config
GUser-sources/: CMakeLists.txt  Doxyfile  GUser.C  GUser.h  GUserHistograms.C
GUser-sources/UserLib/: CMakeLists.txt  Makefile  ReadMe.txt
GUser-sources/UserLib/includes/: Calibration.h  calibration.h  digitalCFD.h  digitalFilters.h  dssdData.h  dssdEvent.h  global.h  trackerData.h  tunnelData.h  tunnelMacroPixel.h
GUser-sources/UserLib/sources/: Calibration.cc  calibration.cc  digitalCFD.cc  digitalFilters.cc  dssdData.cc  dssdEvent.cc  global.cc  trackerData.cc  tunnelData.cc
